week7 first end

--- a/week7/index.html
+++ b/week7/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Home</title>
 </head>
+
 <body>
   <h1> Home </h1>
-  <h3>Login</h3>
-  <form action="/login" method="POST">
-    <p>id: <input type="text" name="id" value="아이디 입력"> </p>
+  <h3>Register</h3>
+  <form action="/" method="POST">
+    <p>id: <input type="text" name="id"> </p>
     <p>pw: <input type="password" name="password"> </p>
-    <p><input type="submit" value="로그인"></p>
+    <p><input type="submit" value="계정 생성"></p>
   </form>
 </body>
+
 </html>
